--- a/config/boards/z96a-rk3568-laptop.conf
+++ b/config/boards/z96a-rk3568-laptop.conf
@@ -4,7 +4,7 @@ BOARDFAMILY="rockchip-rk3568-z96a"
 BOARD_MAINTAINER="z96a-QQGroup"
 BOOTCONFIG="rk3568_defconfig"
 #LINUXCONFIG="linux-z96a-legacy"
-KERNEL_TARGET="legacy"
+KERNEL_TARGET="vendor"
 FULL_DESKTOP="no"
 BOOT_LOGO="desktop"
 BOOT_FDT_FILE="rockchip/rk3568-z96a.dtb"
