--- a/config/sources/families/rockchip-rk3568-z96a.conf
+++ b/config/sources/families/rockchip-rk3568-z96a.conf
@@ -9,8 +9,8 @@
 source "${BASH_SOURCE%/*}/include/rockchip64_common.inc"
 
 BOOTSOURCE='https://github.com/radxa/u-boot.git'
-BOOTBRANCH='branch:stable-4.19-rock3'
-BOOTPATCHDIR="legacy"
+BOOTBRANCH='branch:next-dev-v2024.03'
+BOOTPATCHDIR="legacy/u-boot-radxa-rk35xx"
 OVERLAY_PREFIX='rk3568-z96a'
 
 case $BRANCH in
@@ -25,6 +25,14 @@ case $BRANCH in
 		declare -g KERNEL_MAJOR_MINOR="5.10"   # Major and minor versions of this kernel.
 		KERNELPATCHDIR='rockchip-rk3568-z96a/legacy'
 
+		;;
+	vendor)
+		BOOTDIR='u-boot-rockchip64'
+		declare -g KERNEL_MAJOR_MINOR="6.1"    # Major and minor versions of this kernel.
+		declare -g -i KERNEL_GIT_CACHE_TTL=120 # 2 minutes; this is a high-traffic repo
+		KERNELSOURCE='https://github.com/IhaveAyellowDog/linux-rockchip.git'
+		KERNELBRANCH='branch:rk-6.1-rkr3'
+		KERNELPATCHDIR='rockchip-rk3568-z96a/vendor'
 		;;
 
 esac
