rga&mpp for 6.1

--- a/config/kernel/linux-rockchip-rk3568-z96a-vendor.config
+++ b/config/kernel/linux-rockchip-rk3568-z96a-vendor.config
@@ -4302,16 +4302,12 @@ CONFIG_BACKLIGHT_PWM=y
 # CONFIG_ROCKCHIP_RGA is not set
 # end of RGA
 
-CONFIG_ROCKCHIP_RGA2=y
-# CONFIG_ROCKCHIP_RGA2_PROC_FS is not set
-CONFIG_ROCKCHIP_RGA2_DEBUG_FS=y
-CONFIG_ROCKCHIP_RGA2_DEBUGGER=y
-# CONFIG_ROCKCHIP_MULTI_RGA is not set
-
-CONFIG_ROCKCHIP_RVE=y
-# CONFIG_ROCKCHIP_RVE_PROC_FS is not set
-CONFIG_ROCKCHIP_RVE_DEBUG_FS=y
-CONFIG_ROCKCHIP_RVE_DEBUGGER=y
+CONFIG_ROCKCHIP_MULTI_RGA=y
+CONFIG_ROCKCHIP_RGA_ASYNC=y
+# CONFIG_ROCKCHIP_RGA_PROC_FS is not set
+CONFIG_ROCKCHIP_RGA_DEBUG_FS=y
+CONFIG_ROCKCHIP_RGA_DEBUGGER=y
+# CONFIG_ROCKCHIP_RVE is not set
 
 
 
@@ -4335,6 +4331,7 @@ CONFIG_ROCKCHIP_MPP_VDPU2=y
 CONFIG_ROCKCHIP_MPP_VEPU2=y
 CONFIG_ROCKCHIP_MPP_IEP2=y
 CONFIG_ROCKCHIP_MPP_JPGDEC=y
+CONFIG_ROCKCHIP_MPP_JPGENC=y
 CONFIG_ROCKCHIP_MPP_AV1DEC=y
 CONFIG_ROCKCHIP_MPP_VDPP=y
 CONFIG_ROCKCHIP_DVBM=y
