--- a/config/sources/families/rockchip-rk3568-z96a.conf
+++ b/config/sources/families/rockchip-rk3568-z96a.conf
@@ -9,8 +9,8 @@
 source "${BASH_SOURCE%/*}/include/rockchip64_common.inc"
 
 BOOTSOURCE='https://github.com/radxa/u-boot.git'
-BOOTBRANCH='branch:next-dev-v2024.03'
-BOOTPATCHDIR="legacy/u-boot-radxa-rk35xx"
+BOOTBRANCH='branch:stable-4.19-rock3'
+BOOTPATCHDIR="legacy"
 OVERLAY_PREFIX='rk3568-z96a'
 
 case $BRANCH in
